# cara2c

./: .gitignore  Cargo.toml  README.md  build.rs  cara.pest  test.c  test.cara
crrt/: xmake.lua
crrt/src/: basic.c  basic.h  io.c  memory.c  runtime.c
src/: main.rs
src/ast/: defs.rs  expr.rs  mod.rs  program.rs  types.rs
src/backend/: mod.rs
src/backend/codegen/: decl.rs  exp.rs  mod.rs  program.rs  stmt.rs
src/backend/error/: error.rs  log.rs  mod.rs
src/c_compile/: mod.rs
src/cgen/: decl.rs  func.rs  mod.rs  scope.rs  types.rs  values.rs
src/parser/: decl.rs  exp.rs  mod.rs  stmt.rs
