[package]
name = "cara2c"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version = "1.0.95", default-features=false}
argh = {version="0.1.13",optional=true}
colorz = "1.1.4"
pest = {version="2.7.15", default-features=false}
pest_derive = {version="2.7.15", default-features=false}
rand = {version="0.8.5", default-features=false}
rs_shield = "0.1.4"
spin = "0.9.8"
tempfile = { version = "3.15.0", optional = true }
thiserror = {version="2.0.10", default-features=false}

[features]
std = ["dep:argh"]
compile_c = ["std","dep:tempfile"]
default = ["std","compile_c"]
